--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -10,3 +10,8 @@ pytz==2022.7.1
 requests==2.28.2
 sqlparse==0.4.3
 urllib3==1.26.14
+numpy==1.23.0
+tensorflow==2.12.0
+pandas==1.1.5
+matplotlib==3.6.3
+django-cors-headers==3.14.0
